Fixed graph collapsed headers.

--- a/app/views/components/card/templates/peerViewPeer/_insert.scss
+++ b/app/views/components/card/templates/peerViewPeer/_insert.scss
@@ -55,3 +55,7 @@
     border: 1px solid #DDD;
   border-top: none;
 }
+
+.graph-collapsed{
+  margin-left: 35px;
+}
